"Experience/Skills update plus minor corrections layout improvements."

--- a/examples/resume.tex
+++ b/examples/resume.tex
@@ -91,7 +91,7 @@
 % Leave any of these blank if they are not needed
 \makecvfooter
   {\today}
-  {Gon\c{c}alo N. P. Amador~~~·~~~Résumé}
+  {Gon\c{c}alo N. Paiva Amador~~~·~~~Résumé}
   {\thepage}
 
 
