--- a/examples/resume/certifications.tex
+++ b/examples/resume/certifications.tex
@@ -13,17 +13,15 @@
 %---------------------------------------------------------
   \cventry
     {Object-Oriented Programming in Java (188.0/200)} % Certificate designation
-    %{\href{https://www.sap.com/index.html}{SAP}} % Certifacion entity
     {\href{https://www.sap.com/index.html}{SAP}} % Certifacion entity
     %{Online} % Location
     {} % Location
-    %{Jun. 13, 2018 - Jul. 26, 2018} % Date(s)      
-    {Jun. 2018 - Jul. 2018} % Date(s)          
+    %{June 13, 2018 - July 26, 2018} % Date(s)      
+    {June 2018 - July 2018} % Date(s)          
     {
-	    \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {License \href{https://open.sap.com/}{openSAP}} % License number     
-        \item {\href{https://open.sap.com/verify/xocis-tyvip-gynuh-byneg-punel}{Online Certificate}} %Certificate URL 
-        \item {Valid from Jul. 25, 2018 - Present} % Validity
+	    \begin{cvitems} % Description(s) of tasks/responsibilities  
+        \item {Online Certificate: \url{https://open.sap.com/verify/xocis-tyvip-gynuh-byneg-punel}} %Certificate URL 
+        \item {Valid from July 25, 2018 - Present} % Validity
       \end{cvitems}
     }   
     
@@ -34,28 +32,27 @@
     {} % Certifacion entity
     %{Online} % Location
     {} % Location
-    %{Apr. 10, 2018 - May. 30, 2018} % Date(s)      
-    {Apr. 2018 - May. 2018} % Date(s)          
+    %{Apr. 10, 2018 - May 30, 2018} % Date(s)      
+    {Apr. 2018 - May 2018} % Date(s)          
     {
-	    \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {License \href{https://open.sap.com/}{openSAP}} % License number     
-        \item {\href{https://open.sap.com/verify/xosen-nykel-vybup-susig-sihim}{Online Certificate}} %Certificate URL 
-        \item {Valid from May. 30, 2018 - Present} % Validity
+	    \begin{cvitems} % Description(s) of tasks/responsibilities     
+        \item {Online Certificate: \url{https://open.sap.com/verify/xosen-nykel-vybup-susig-sihim}} %Certificate URL 
+        \item {Valid from May 30, 2018 - Present} % Validity
       \end{cvitems}
     }   
 
 %---------------------------------------------------------
   \cventry
     {Design Your First App with Build* (230.0/240)} % Certificate designation
+    %{\href{https://www.sap.com/index.html}{SAP}} % Certifacion entity
     {} % Certifacion entity
     %{Online} % Location
     {} % Location
     %{Oct. 4, 2017 - Nov. 9, 2017} % Date(s)      
     {Oct. 2017 - Nov. 2017} % Date(s)      
     {
-	    \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {License \href{https://open.sap.com/}{openSAP}} % License number     
-        \item {\href{https://open.sap.com/verify/xoban-setyz-vogaf-leryz-lufor}{Online Certificate}} %Certificate URL 
+	    \begin{cvitems} % Description(s) of tasks/responsibilities    
+        \item {Online Certificate: \url{https://open.sap.com/verify/xoban-setyz-vogaf-leryz-lufor}} %Certificate URL 
         \item {Valid from Nov. 9, 2017 - Present} % Validity
       \end{cvitems}
     }      
@@ -70,9 +67,8 @@
 %    %{Sep. 6, 2017 - Oct. 12, 2017} % Date(s)      
 %    {Sep. 2017 - Oct. 2017} % Date(s)          
 %    {
-%	    \begin{cvitems} % Description(s) of tasks/responsibilities
-%        \item {License \href{https://open.sap.com/}{openSAP}} % License number     
-%        \item {\href{https://open.sap.com/verify/xuhos-fogot-hytyc-pybin-helen}{Online Certificate}} %Certificate URL 
+%	    \begin{cvitems} % Description(s) of tasks/responsibilities   
+%        \item {Online Certificate: \url{https://open.sap.com/verify/xuhos-fogot-hytyc-pybin-helen}} %Certificate URL 
 %        \item {Valid from Oct. 12, 2017 - Present} % Validity
 %      \end{cvitems}
 %    }      
@@ -85,11 +81,10 @@
     %{Online} % Location
     {} % Location
     %{April 5, 2017 - May 18, 2017} % Date(s)      
-    {April 2017 - May 2017} % Date(s)      
+    {Apr. 2017 - May 2017} % Date(s)      
     {
-	    \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {License \href{https://open.sap.com/}{openSAP}} % License number     
-        \item {\href{https://open.sap.com/verify/xuhes-rimus-bikon-roper-hicom}{Online Certificate}} %Certificate URL 
+	    \begin{cvitems} % Description(s) of tasks/responsibilities    
+        \item {Online Certificate: \url{https://open.sap.com/verify/xuhes-rimus-bikon-roper-hicom}} %Certificate URL 
         \item {Valid from May 18, 2017 - Present} % Validity
       \end{cvitems}
     }    
@@ -102,11 +97,10 @@
     %{Online} % Location
     {} % Location
     %{Feb. 7, 2017 - March 29, 2017} % Date(s)      
-    {Feb. 2017 - March 2017} % Date(s)      
+    {Feb. 2017 - Mar. 2017} % Date(s)      
     {
-	    \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {License \href{https://open.sap.com/}{openSAP}} % License number     
-        \item {\href{https://open.sap.com/verify/xulor-nynoz-soped-muvuv-zitek}{Online Certificate}} %Certificate URL 
+	    \begin{cvitems} % Description(s) of tasks/responsibilities   
+        \item {Online Certificate: \url{https://open.sap.com/verify/xulor-nynoz-soped-muvuv-zitek}} %Certificate URL 
         \item {Valid from March 29, 2017 - Present} % Validity
       \end{cvitems}
     }        
@@ -119,11 +113,10 @@
     %{Online} % Location
     {} % Location
     %{Jan. 11, 2017 - March 2, 2017} % Date(s)      
-    {Jan. 2017 - March 2017} % Date(s)      
+    {Jan. 2017 - Mar. 2017} % Date(s)      
     {
-	    \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {License \href{https://open.sap.com/}{openSAP}} % License number     
-        \item {\href{https://open.sap.com/verify/xugal-vaseb-firih-zadyd-deniv}{Online Certificate}} %Certificate URL 
+	    \begin{cvitems} % Description(s) of tasks/responsibilities  
+        \item {Online Certificate: \url{https://open.sap.com/verify/xugal-vaseb-firih-zadyd-deniv}} %Certificate URL 
         \item {Valid from Feb. 28, 2017 - Present} % Validity
       \end{cvitems}
     }
@@ -135,8 +128,7 @@
     {Covilh\~a, Portugal} % Location
     {Oct. 2013 - Jan. 2014} % Date(s)       
     {
-	    \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {\href{https://www.netacad.com/}{Cisco NetAcad}} % License number    
+	    \begin{cvitems} % Description(s) of tasks/responsibilities  
         \item {Valid from Jan. 2014 - Present} % Validity
       \end{cvitems}
     }
