--- a/examples/resume/education.tex
+++ b/examples/resume/education.tex
@@ -23,7 +23,7 @@
         \item {\textbf{Supervisor:} \href{http://www.di.ubi.pt/~agomes/}{Professor Abel Gomes}}
         \item {\textbf{Context:} Implementation of a modular game engine, suitable for teaching a video games technologies course.%, and serve as a framework to experiment with scene management for MMOGs. 
         Path finding algorithms merged with influence maps.}
-        \item {\textbf{Functions:} Gathering/analysis of state-of-the-art regarding (i)modular game engine architectures, (ii)video game technologies teaching methodologies, (iii)influence maps and path finding algorithms. %(iv)scene management in virtual environments. 
+        \item {\textbf{Functions:} Survey state-of-the-art regarding (i)modular game engine architectures, (ii)video game technologies teaching methodologies, (iii)influence maps and path finding algorithms. %(iv)scene management in virtual environments. 
         Game engine development (JOT). %Implementation of techniques for state management in MMOGs.         
         %Integration of the proposed solution with a network simulator to test the solution(s) performance.         
         Implementation of a novel pathfinding algorithm, and two novel techniques to integrate influence maps with pathfinders. Writing of journal/conference scientific articles and thesis, presentation of conference articles, and thesis oral presentation/defense.}
