--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -16,22 +16,32 @@
 \begin{cventries}
 
 %---------------------------------------------------------
-
   \cventry
-    {Technical Account Manager} % Job title
+    {Oracle Database Developer} % Job title
     {\href{https://www.amaris.com/}{Amaris} \textbf{(Professional)}} % Organization
     {Lisbon, Portugal} % Location
+    {Jan. 2019 - Present} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities      
+		\item {\textbf{Context:} supporting the company's SQL infrastructure, reporting, business intelligence, integrations and SQL maintenance (backups, tuning, etc.). 
+}
+		\item {\textbf{Functions:} inspecting the SQL Queries and the Sequence of Queries and then fine tuning those appropriately before the Application goes into Production. Develop, maintain, and optimize the internal applications and database systems. Day to day support activities, resolve system bugs, assist business staff with questions, investigate issues. Fully document all processes that are being created. Quickly respond to emergency requests and system outages.}		
+		\item {\textbf{Technologies:} Oracle SQL developer, PL-SQL, Apache AirFlow, Redmine, Skype/Skype for Business, MS Office Suite.}		
+      \end{cvitems}
+    } 
+    
+%---------------------------------------------------------
+  \cventry
+    {Technical Account Manager} % Job title
+    {} % Organization
+    {} % Location
     {Feb. 2018 - Dec. 2018} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities      
-%        \item {Assistance in the integration of a login functionality managed by Azure AD within a vacation management online solution.}
-%%        \item {Development and support of an information management system in the areas of social action and health. %used by a Portuguese collective entity of private law and administrative public utility.} 
-%        \item {Development and bug support for an in use information management system in the areas of social action and health. %used by a Portuguese collective entity of private law and administrative public utility.} 
-%        \linebreak (\textbf{cannot disclose from which due to confidentiality agreement terms}).}		
 		\item {\textbf{Context:} Primary technical contact point with one or more clients, assisting in planning, debugging, and supervising ongoing critical business applications.}
 		\item {\textbf{Functions:} provide technical support for customers to support pre-sales and post-sales processes, address all product-related queries on time, create learning materials and train customers to use products effectively, assist in the creation of support documentation for existing software/service products, provide developers with customer's feedback to help identify potential new features or products, report on product performance, identify solutions to reduce support costs, analyze customer's needs and suggest upgrades or additional features to meet their requirements.}		
 		\item {\textbf{Technologies:} Azure DevOps, TFS, IIS 6-8, VNC, mRemote, Cisco AnyConnect, %Cisco VPN client, 
-FortiClient, Teamviewer, Skype/Skype for Business, WebEx, MS Outlook, MS Office, PowerBI, SSRS/SSIS/SSAS, Postman, SoapUI, T-SQL, MS SQL-server 2012-2017.}		
+FortiClient, Teamviewer, Skype/Skype for Business, WebEx, MS Office Suite, PowerBI, SSRS/SSIS/SSAS, Postman, SoapUI, T-SQL, MS SQL-server 2012-2017, Zendesk.}		
       \end{cvitems}
     } 
     
@@ -40,7 +50,23 @@ FortiClient, Teamviewer, Skype/Skype for Business, WebEx, MS Outlook, MS Office,
     {Software Consultant} % Job title
     {\href{https://www.reditpro.com/}{RedIT} \textbf{(Professional)}} % Organization
     {Lisbon, Portugal} % Location
-    {Aug. 2017 - Jan. 2018} % Date(s)
+    {Oct. 2017 - Jan. 2018} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities      
+		\item {\textbf{Context:} 
+Adaptive software development and integration with Model-Based architecture for an energy sector company %(cannot disclose from which due to confidentiality agreement terms)
+.}
+		\item {\textbf{Functions:} Integration of Uber-like functionalities into existing Model-Based architecture modules. Production PL-SQL databases replication. Integration, algorithm development, and prototyping of route calculation and schedule assigning software into existing Model-Based architecture modules.}		
+		\item {\textbf{Technologies:} JavaScript, Git, C\#, MS SQL-server 2016, Visual Studio 2017, Oracle SQL developer, T-SQL, PL-SQL, Slack.}
+      \end{cvitems}
+    } 
+    
+%---------------------------------------------------------
+  \cventry
+    {Software Consultant} % Job title
+    {} % Organization
+    {} % Location
+    {Aug. 2017 - Sept. 2018} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities      
 %        \item {Assistance in the integration of a login functionality managed by Azure AD within a vacation management online solution.}
@@ -60,13 +86,9 @@ Adaptive, perfective and corrective software maintenance for an information mana
     {Software Consultant} % Job title
     {} % Organization
     {} % Location
-    {July 2017 - August 2017} % Date(s)
+    {July 2017} % Date(s)
     {
-      \begin{cvitems} % Description(s) of tasks/responsibilities      
-%        \item {Assistance in the integration of a login functionality managed by Azure AD within a vacation management online solution.}
-%%        \item {Development and support of an information management system in the areas of social action and health. %used by a Portuguese collective entity of private law and administrative public utility.} 
-%        \item {Development and bug support for an in use information management system in the areas of social action and health. %used by a Portuguese collective entity of private law and administrative public utility.} 
-%        \linebreak (\textbf{cannot disclose from which due to confidentiality agreement terms}).}		
+      \begin{cvitems} % Description(s) of tasks/responsibilities  
 		\item {\textbf{Context:} Perfective and corrective software maintenance in the integration of a login functionality managed by Azure AD within a near release vacation management online solution, lets refer to it as Y.}
 		\item {\textbf{Functions:} Study of Azure AD usage scenarios. Assessment on how to integrate (at the time) Y login process with Azure AD.}		
 		\item {\textbf{Technologies:} Git, Angular2/4, JSON, Bootstrap, Node.js, C\#, MVC 5.0, MS SQL-server 2016, Visual Studio 2017, Visual Studio Code, Azure AD.}
