--- a/examples/resume/skills.tex
+++ b/examples/resume/skills.tex
@@ -47,7 +47,8 @@
         %jQuery/Ajax/JSON/Bootstrap\ref{9}{$^{[9]}$},
         jQuery/Ajax/JSON/Bootstrap\ref{5}{$^{[5]}$},  
         %Angular2/4 \& Node.js\ref{9}{$^{[9]}$},  
-        Angular2/4 \& Node.js\ref{5}{$^{[5]}$},  
+        Angular %2/4 
+        \& Node.js\ref{5}{$^{[5]}$},  
         OpenGL\ref{4}{$^{[4]}$},      
         CUDA/OpenMP/OpenCL/MPI\ref{3}{$^{[3]}$},
         %HTML/CSS/JavaScript/XML\ref{3}{$^{[3]}$}\ref{9}{$^{[9]}$}, 
@@ -71,12 +72,14 @@
       \begin{cvitems} % Description(s) 
         \item {        
         %Team Foundation Server\ref{9}{$^{[9]}$},
-		Azure DevOps\ref{5}{$^{[5]}$},         
-        Team Foundation Server (TFS)\ref{5}{$^{[5]}$},
+        Azure DevOps\ref{5}{$^{[5]}$},         
+        Team Foundation Server (TFS)\ref{6}{$^{[6]}$},
+        Zendesk\ref{5}{$^{[5]}$},
+        Redmine\ref{5}{$^{[5]}$},  
 		%Git\ref{3}{$^{[3]}$}\ref{9}{$^{[9]}$},         
         Git\ref{3}{$^{[3]}$}\ref{5}{$^{[5]}$}, 
         %SVN\ref{2}{$^{[2]}$}\ref{9}{$^{[9]}$},
-        SVN\ref{2}{$^{[2]}$}\ref{5}{$^{[5]}$},  
+        SVN\ref{2}{$^{[2]}$}\ref{5}{$^{[5]}$},
         Maven\ref{2}{$^{[2]}$},
         %Maven\ref{2}{$^{[2]}$}\ref{6}{$^{[6]}$}, 
         %Ant\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$},
@@ -86,6 +89,7 @@
         Eclipse\ref{3}{$^{[3]}$},  
         %Netbeans\ref{4}{$^{[4]}$}\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$}, 
         Netbeans\ref{4}{$^{[4]}$}, 
+        Oracle SQL developer\ref{5}{$^{[5]}$},
         %JMonkeyEngine\ref{2}{$^{[2]}$}\ref{6}{$^{[6]}$}, 
         %Visual Studio 2005-current\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$}\ref{9}{$^{[9]}$},
         Visual Studio 2005-current\ref{4}{$^{[4]}$}\ref{5}{$^{[5]}$},
@@ -93,12 +97,12 @@
         Visual Studio Code\ref{5}{$^{[5]}$},
         %MS SQL-server 2014-2016\ref{2}{$^{[2]}$}\ref{9}{$^{[9]}$},
         MS SQL-server 2012-2017\ref{2}{$^{[2]}$}\ref{5}{$^{[5]}$},
-        MS Outlook\ref{5}{$^{[5]}$},
+        MS Office Suite\ref{6}{$^{[6]}$},
         %Google Chrome\ref{8}{$^{[8]}$}\ref{9}{$^{[9]}$}%,
         %Skype\ref{4}{$^{[4]}$}\ref{5}{$^{[5]}$},
         Skype for Business\ref{5}{$^{[5]}$},
         WebEx\ref{5}{$^{[5]}$},
-        Google Chrome\ref{5}{$^{[5]}$},
+        Google Chrome\ref{6}{$^{[6]}$},        
         Teamviewer\ref{4}{$^{[4]}$}\ref{5}{$^{[5]}$}%,
         %\textbf{Mozilla Firefox} 
         %\textbf{Gimp}
@@ -149,20 +153,15 @@
     {
       \begin{cvitems} % Description(s)
         \item {
-%        MS Windows 2003-2008 server, XP - 10\ref{8}{$^{[8]}$}, 
-%        Linux (Ubuntu, Mint, Fedora, and OpenSuse)\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$}, 
-%        Android\ref{8}{$^{[8]}$}, 
-%        %\textbf{iOS}\ref{6}{$^{[6]}$},
-%        CiscoIOS\ref{13}{$^{[13]}$}%,
-		MS Windows 2003-2016 server, XP - 10\ref{4}{$^{[4]}$}\ref{6}{$^{[6]}$}, 
+        MS Windows 2003-2016 server, XP - 10\ref{4}{$^{[4]}$}\ref{6}{$^{[6]}$}, 
         Linux (Ubuntu, Mint, Fedora, and OpenSuse)\ref{4}{$^{[4]}$}, 
         %Android\ref{8}{$^{[8]}$}, 
-        %\textbf{iOS}\ref{6}{$^{[6]}$},
+        %iOS\ref{6}{$^{[6]}$},
         CiscoIOS\ref{5}{$^{[5]}$}%,
         .} 
       \end{cvitems}
     }  
-  \vspace{-0.2cm} 
+  \vspace{-0.4cm} 
     
 
 %---------------------------------------------------------
