--- a/examples/resume/summary.tex
+++ b/examples/resume/summary.tex
@@ -10,12 +10,15 @@
 \begin{cvsummary}
 
 %---------------------------------------------------------
-Software developer in several programming languages, also with experience in Primary technical contact point with one or more clients, assisting in planning, debugging, and supervising ongoing critical business applications.
+Software developer in several programming languages, also with experience in primary technical contact point with one or more clients, assisting in planning, debugging, and supervising ongoing critical business applications.
 Former Project Researcher, Lab Instructor, and Scientific Presenter with 9+ Yrs of experience.
-Highly motivated, communicative, and self-sufficient%, and versatile 
-professional with solid academic background in Computer Science and Engineering, namely in: 
+Highly motivated, communicative, and self-
+-sufficient %, and versatile
+professional with solid academic background in C.S. \& Engineering, namely in: 
 %Proved ability to address problems with a tendentiously unbiased and professional view, namely regarding: 
-Game Engine Technologies, Teaching methodologies, HPC, Geometric Computing, and HCI.
+Game Engine Technologies
+, Teaching% methodologies
+, HPC, Geometric Computing, and HCI.
 Known as a team player %, multi-tasker, 
 and constant self-driven learner; 
 striving to address novel and exciting challenges. %by integrating, adapting, developing novel knowledge/tools.
