"Updated experience, skills and general information."

--- a/examples/resume.tex
+++ b/examples/resume.tex
@@ -58,10 +58,10 @@
 %\faHome \acvHeaderIconSep Peniche, Portugal {\enskip\cdotp\enskip} 
 \faHome \acvHeaderIconSep Lisbon, Portugual {\enskip\cdotp\enskip} 
 \faFlag \acvHeaderIconSep Portuguese {\enskip\cdotp\enskip} 
-%\faBirthdayCake \acvHeaderIconSep 27/07/1983 {\enskip\cdotp\enskip} 
-\faMars \acvHeaderIconSep Male %{\enskip\cdotp\enskip} 
+\faBirthdayCake \acvHeaderIconSep 27/07/1983 {\enskip\cdotp\enskip} 
+\faMars \acvHeaderIconSep Male {\enskip\cdotp\enskip} 
 %\faFemale \acvHeaderIconSep Single\vspace{0.1cm}
-%\faMale \acvHeaderIconSep Single\vspace{0.1cm}
+\faMale \acvHeaderIconSep Single\vspace{0.1cm}
 }
 %\address{Rua das Oper\'arias Conserveiras, n.$^o$ 15, 2520-639, Peniche, Portugal}
 
