--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -17,16 +17,16 @@
 
 %---------------------------------------------------------
   \cventry
-    {Oracle Database Developer} % Job title
+    {Software and Oracle Database Developer} % Job title
     {\href{https://www.amaris.com/}{Amaris} \textbf{(Professional)}} % Organization
     {Lisbon, Portugal} % Location
     {Jan. 2019 - Present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities      
-		\item {\textbf{Context:} supporting the company's SQL infrastructure, reporting, business intelligence, integrations and SQL maintenance (backups, tuning, etc.). 
+		\item {\textbf{Context:} account transfer among banks, adaptive software development and integration with Model-Based architecture for banking software. 
 }
-		\item {\textbf{Functions:} inspecting the SQL Queries and the Sequence of Queries and then fine tuning those appropriately before the Application goes into Production. Develop, maintain, and optimize the internal applications and database systems. Day to day support activities, resolve system bugs, assist business staff with questions, investigate issues. Fully document all processes that are being created. Quickly respond to emergency requests and system outages.}		
-		\item {\textbf{Technologies:} Oracle SQL developer, PL-SQL, Apache AirFlow, Redmine, Skype/Skype for Business, MS Office Suite.}		
+		\item {\textbf{Functions:} inspecting PL-SQL queries, the sequence of queries, and then fine tuning those queries prior to sending data. Day to day support activities, investigate and address issues regarding quality of sent data with the business area. Develop, maintain, and optimize internal applications and database systems.}		
+		\item {\textbf{Technologies:} Oracle SQL developer, PL-SQL, Redmine, Skype/Skype for Business, MS Office Suite, Apache AirFlow, Apache Ant, Apache Maven, Apache Tomcat, Apache Struts, Eclipse, Java 6-8.}		
       \end{cvitems}
     } 
     
