--- a/examples/resume/skills.tex
+++ b/examples/resume/skills.tex
@@ -37,7 +37,7 @@
         %C\#\ref{2}{$^{[2]}$}\ref{9}{$^{[9]}$},
         C\#\ref{2}{$^{[2]}$}\ref{5}{$^{[5]}$}, 
         %Java\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$},
-        Java\ref{4}{$^{[4]}$}, 
+        Java\ref{4}{$^{[4]}$}\ref{5}{$^{[5]}$}, 
         %shell scripting\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$},
         shell scripting\ref{4}{$^{[4]}$}, 
 		%PL/-SQL\ref{9}{$^{[9]}$},        
@@ -48,7 +48,8 @@
         jQuery/Ajax/JSON/Bootstrap\ref{5}{$^{[5]}$},  
         %Angular2/4 \& Node.js\ref{9}{$^{[9]}$},  
         Angular %2/4 
-        \& Node.js\ref{5}{$^{[5]}$},  
+        \& Node.js\ref{5}{$^{[5]}$},
+        Apache Struts\ref{5}{$^{[5]}$},
         OpenGL\ref{4}{$^{[4]}$},      
         CUDA/OpenMP/OpenCL/MPI\ref{3}{$^{[3]}$},
         %HTML/CSS/JavaScript/XML\ref{3}{$^{[3]}$}\ref{9}{$^{[9]}$}, 
@@ -80,15 +81,16 @@
         Git\ref{3}{$^{[3]}$}\ref{5}{$^{[5]}$}, 
         %SVN\ref{2}{$^{[2]}$}\ref{9}{$^{[9]}$},
         SVN\ref{2}{$^{[2]}$}\ref{5}{$^{[5]}$},
-        Maven\ref{2}{$^{[2]}$},
+        Apache Maven\ref{2}{$^{[2]}$}\ref{5}{$^{[5]}$},
         %Maven\ref{2}{$^{[2]}$}\ref{6}{$^{[6]}$}, 
         %Ant\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$},
-        Ant\ref{4}{$^{[4]}$},  
+        Apache Ant\ref{4}{$^{[4]}$}\ref{5}{$^{[5]}$},  
+        Apache Tomcat\ref{5}{$^{[5]}$},  
         %\textbf{LibreOffice}\ref{8}{$^{[8]}$}, 
         %Eclipse\ref{3}{$^{[3]}$}\ref{7}{$^{[7]}$},
-        Eclipse\ref{3}{$^{[3]}$},  
+        Eclipse\ref{3}{$^{[3]}$}\ref{5}{$^{[5]}$},  
         %Netbeans\ref{4}{$^{[4]}$}\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$}, 
-        Netbeans\ref{4}{$^{[4]}$}, 
+        %Netbeans\ref{4}{$^{[4]}$}, 
         Oracle SQL developer\ref{5}{$^{[5]}$},
         %JMonkeyEngine\ref{2}{$^{[2]}$}\ref{6}{$^{[6]}$}, 
         %Visual Studio 2005-current\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$}\ref{9}{$^{[9]}$},
@@ -112,7 +114,7 @@
         %\textbf{Omnet++}\ref{2}{$^{[2]}$},
         %\textbf{Blender}, 
         %\textbf{Android Studio},
-        %\textbf{Texmaker \& JabRef}\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$},
+        %Texmaker \& JabRef\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$}%,
         .}       
       \end{cvitems}
     }  
