"Updated skills/experience."

--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -25,7 +25,7 @@
       \begin{cvitems} % Description(s) of tasks/responsibilities      
 		\item {\textbf{Context:} account transfer among banks, adaptive software development and integration with Model-Based architecture for banking software. 
 }
-		\item {\textbf{Functions:} inspecting PL-SQL queries, the sequence of queries, and then fine tuning those queries prior to sending data. Day to day support activities, investigate and address issues regarding quality of sent data with the business area. Develop, maintain, and optimize internal applications and database systems.}		
+		\item {\textbf{Functions:} inspecting PL-SQL queries, the sequence of queries, and then fine tuning those queries prior to sending data. Day to day support activities, investigate and address issues regarding quality of sent data with the business area. Adaptive, perfective and corrective software maintenance for banking 	solutions.}		
 		\item {\textbf{Technologies:} Oracle SQL developer, PL-SQL, Redmine, Skype/Skype for Business, MS Office Suite, Apache AirFlow, Apache Ant, Apache Maven, Apache Tomcat, Apache Struts, Eclipse, Java 6-8.}		
       \end{cvitems}
     } 
