--- a/examples/resume/skills.tex
+++ b/examples/resume/skills.tex
@@ -45,7 +45,7 @@
         %T-SQL\ref{2}{$^{[2]}$}\ref{9}{$^{[9]}$},
         T-SQL\ref{2}{$^{[2]}$}\ref{6}{$^{[6]}$},  
         %jQuery/Ajax/JSON/Bootstrap\ref{9}{$^{[9]}$},
-        jQuery/Ajax/JSON/Bootstrap\ref{5}{$^{[5]}$},  
+        JSP/jQuery/Ajax/JSON/Bootstrap\ref{5}{$^{[5]}$},          
         %Angular2/4 \& Node.js\ref{9}{$^{[9]}$},  
         Angular %2/4 
         \& Node.js\ref{5}{$^{[5]}$},
@@ -53,7 +53,7 @@
         OpenGL\ref{4}{$^{[4]}$},      
         CUDA/OpenMP/OpenCL/MPI\ref{3}{$^{[3]}$},
         %HTML/CSS/JavaScript/XML\ref{3}{$^{[3]}$}\ref{9}{$^{[9]}$}, 
-        HTML/CSS/JavaScript/XML\ref{3}{$^{[3]}$}\ref{5}{$^{[5]}$}, 
+        HTML/CSS/JavaScript/XML\ref{3}{$^{[3]}$}\ref{6}{$^{[6]}$}, 
         UML\ref{2}{$^{[2]}$},
         LaTeX\ref{4}{$^{[4]}$}%,
         %\textbf{Prolog}\ref{2}{$^{[2]}$},
@@ -87,10 +87,9 @@
         Apache Ant\ref{4}{$^{[4]}$}\ref{5}{$^{[5]}$},  
         Apache Tomcat\ref{5}{$^{[5]}$},  
         %\textbf{LibreOffice}\ref{8}{$^{[8]}$}, 
-        %Eclipse\ref{3}{$^{[3]}$}\ref{7}{$^{[7]}$},
         Eclipse\ref{3}{$^{[3]}$}\ref{5}{$^{[5]}$},  
         %Netbeans\ref{4}{$^{[4]}$}\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$}, 
-        %Netbeans\ref{4}{$^{[4]}$}, 
+        Netbeans\ref{4}{$^{[4]}$}, 
         Oracle SQL developer\ref{5}{$^{[5]}$},
         %JMonkeyEngine\ref{2}{$^{[2]}$}\ref{6}{$^{[6]}$}, 
         %Visual Studio 2005-current\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$}\ref{9}{$^{[9]}$},
@@ -105,7 +104,10 @@
         Skype for Business\ref{5}{$^{[5]}$},
         WebEx\ref{5}{$^{[5]}$},
         Google Chrome\ref{6}{$^{[6]}$},        
-        Teamviewer\ref{4}{$^{[4]}$}\ref{5}{$^{[5]}$}%,
+        Teamviewer\ref{4}{$^{[4]}$}\ref{5}{$^{[5]}$},
+        SoapUI\ref{5}{$^{[5]}$},
+        Postman\ref{5}{$^{[5]}$},
+        Swagger\ref{5}{$^{[5]}$},        
         %\textbf{Mozilla Firefox} 
         %\textbf{Gimp}
         %\textbf{WhatsApp}\ref{5}{$^{[5]}$}
@@ -163,7 +165,7 @@
         .} 
       \end{cvitems}
     }  
-  \vspace{-0.4cm} 
+  \vspace{-0.6cm} 
     
 
 %---------------------------------------------------------
