--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -23,9 +23,9 @@
     {Jan. 2019 - Present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities      
-		\item {\textbf{Context:} account transfer among banks, adaptive software development and integration with Model-Based architecture for banking software. 
+		\item {\textbf{Context:} account migration among banks, adaptive, perfective and corrective banking software development. 
 }
-		\item {\textbf{Functions:} inspecting PL-SQL queries, the sequence of queries, and then fine tuning those queries prior to sending data. Day to day support activities, investigate and address issues regarding quality of sent data with the business area. Adaptive, perfective and corrective software maintenance for banking 	solutions.}		
+		\item {\textbf{Functions:} inspecting PL-SQL queries, the sequence of queries, and then fine tuning those queries prior to sending data. Day to day support activities, investigate and address issues regarding quality of sent data with the business area. Adaptive, perfective and corrective banking software development.}		
 		\item {\textbf{Technologies:} Oracle SQL developer, PL-SQL, Redmine, Skype/Skype for Business, MS Office Suite, Apache AirFlow, Apache Ant, Apache Maven, Apache Tomcat, Apache Struts, Eclipse, Java 6-8.}		
       \end{cvitems}
     } 
@@ -56,7 +56,7 @@ FortiClient, Teamviewer, Skype/Skype for Business, WebEx, MS Office Suite, Power
 		\item {\textbf{Context:} 
 Adaptive software development and integration with Model-Based architecture for an energy sector company %(cannot disclose from which due to confidentiality agreement terms)
 .}
-		\item {\textbf{Functions:} Integration of Uber-like functionalities into existing Model-Based architecture modules. Production PL-SQL databases replication. Integration, algorithm development, and prototyping of route calculation and schedule assigning software into existing Model-Based architecture modules.}		
+		\item {\textbf{Functions:} Integration of Uber-like functionalities into existing Model-Based architecture modules. PL-SQL database replication. Integration, algorithm development, and prototyping of route calculation and schedule assigning software into existing Model-Based architecture modules.}		
 		\item {\textbf{Technologies:} JavaScript, Git, C\#, MS SQL-server 2016, Visual Studio 2017, Oracle SQL developer, T-SQL, PL-SQL, Slack.}
       \end{cvitems}
     } 
